--- a/hello_world/.project
+++ b/hello_world/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>learn-osgi</name>
+	<name>hello_world</name>
 	<comment></comment>
 	<projects>
 	</projects>
